# chatter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: codecov.yml
.github/workflows/: check-commits.yml  coverage.yml  integration.yml  rust-ci.yml
client/: Cargo.toml
client/src/: commands.rs  main.rs  network.rs  theme.rs  ui.rs
client/src/ui/: dialogs.rs  layout.rs  status.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs  protocol.rs  ws_messages.rs
scripts/: gen_coverage.sh  test_integration.sh
server/: Cargo.toml  notes.md
server/src/: core.rs  main.rs
server/src/auth/: client.rs  users.rs
server/src/core/: broker.rs  connection.rs  server.rs
server/src/core/broker/: broker_tests.rs  tests.rs
server/src/core/connection/: connection_tests.rs
server/src/core/server/: broker.rs
server/src/network/: connection.rs
tests/: conftest.py  requirements.txt  test_integration.py
