[workspace]
resolver = "2"
members = ["client", "common", "server"]

[workspace.package]
authors = ["Javier FILEIV <javier.fileiv@gmail.com>"]

[workspace.dependencies]
common = { path = "./common" }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1.0.150"
chrono = "0.4.45"
log = "0.4"
flexi_logger = "0.31.9"

