[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "Simple chatter client"

[dependencies]
clap = { workspace = true }
tokio = { version = "1", features = ["full"] }
serde_json = { workspace = true }
tokio-tungstenite = "0.26"
cursive = "0.21.1"
chrono = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
common = { workspace = true }
cursive-flexi-logger-view = "0.6.0"
