[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Simple chatter server"
authors.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
common = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
flexi_logger = "0.31.9"
log = "0.4"
serde_json = "1"

[dev-dependencies]
futures = "0.3"
