[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Simple chatter server"
authors.workspace = true

[dependencies]
common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
flexi_logger = "0.31.9"
log = "0.4"

[dev-dependencies]
futures = "0.3"
