[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "Simple chatter server"
authors.workspace = true

[dependencies]
common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
futures = "0.3"
